# multiple_llm_eval

./: .gitignore  README.md  REPORT.md  benchmark_config.yaml  pyproject.toml  setup_a10.sh
benchmarks/: coding.jsonl  general_knowledge.jsonl  math.jsonl  medical.jsonl  reasoning.jsonl  summarization.jsonl  vietnamese.jsonl
results/: comparison_report.html  metrics.json  summary.csv
results/raw/: gemma-3-1b__general-knowledge.json  gemma-3-1b__math.json  gemma-3-1b__medical.json  gemma-3-1b__reasoning.json  gemma-3-1b__vietnamese.json  llama-3-2-1b__general-knowledge.json  llama-3-2-1b__math.json  llama-3-2-1b__medical.json  llama-3-2-1b__reasoning.json  llama-3-2-1b__vietnamese.json  qwen2-5-0-5b__general-knowledge.json  qwen2-5-0-5b__math.json  qwen2-5-0-5b__medical.json  qwen2-5-0-5b__reasoning.json  qwen2-5-0-5b__vietnamese.json  qwen2-5-1-5b__general-knowledge.json  qwen2-5-1-5b__math.json  qwen2-5-1-5b__medical.json  qwen2-5-1-5b__reasoning.json  qwen2-5-1-5b__vietnamese.json  smollm2-1-7b__general-knowledge.json  smollm2-1-7b__math.json  smollm2-1-7b__medical.json  smollm2-1-7b__reasoning.json  smollm2-1-7b__vietnamese.json
src/eval_llm/: benchmark.py  charts.py
